<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RealNum</string>
    <string name="login_text">Already have an Account?</string>
    <string name="app_title">RealNum</string>
    <string name="profile_image">Profile Image</string>
    <string name="main_welcome_text">Welcome to RealNum,\n USER</string>
    <string name="button_tracking_text">Tracking</string>
    <string name="button_reminder_text">Reminder</string>
    <string name="button_overview_text">Overview</string>
    <string name="button_profile_text">Profile</string>
    <string name="button_log_out_text">Log Out</string>
    <string name="d">D</string>
    <string name="w">W</string>
    <string name="m">M</string>
    <string name="blood_pressure">Blood Pressure</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_fragment_label">Welcome Fragment</string>
    <string name="signup_activity_label">Sign Up Activity</string>
    <string name="tracking_activity">Tracking Activity</string>
    <string name="splash_activity_label">Splash Activity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="user_name">USERNAME</string>
    <string name="button_change_user_name">Change or Edit Name</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="user_height">USERHEIGHT</string>
    <string name="button_change_user_height">Change Height</string>
    <string name="button_settings">Settings</string>
    <string name="create_account">Create Account</string>
    <string name="email_address_or_phone_number">Email address or phone number</string>
    <string name="password">Password</string>
    <string name="profile_activity_label">Profile Activity</string>
<<<<<<< HEAD
    <string name="reenter_password">Reenter Password</string>
    <string name="button_change_profile_image">Change Profile Image</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="text_button_login">Login</string>

=======
    <string name="title_activity_blood_glucose">BloodGlucoseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_glucose">GlucoseActivity</string>
    <string name="title_activity_blood_glouse_screen">BloodGlouseScreen</string>
>>>>>>> 42495caf0e97f41c5ba4e11c484af5838a70e194

</resources>